gcc/testsuite/gcc.dg/pr35430.c
@@ -1,0 +1,10 @@
+/* PR c/35430 */
+/* { dg-do compile } */
+/* { dg-options "-Wsign-compare" } */
+
+void
+foo (__complex__ int i)
+{
+  i == 0u;
+  i == ~1u;	/* { dg-warning "comparison between signed and unsigned integer expressions" } */
+}
